--- a/src/components/NavtreeContainer.astro
+++ b/src/components/NavtreeContainer.astro
@@ -15,7 +15,7 @@
     #nav_container{
         align-self: start;
         position: sticky;
-        top: 0;
+        top: 53px;
         overflow-y: auto;
         max-height: 100vh;
     }
@@ -23,6 +23,7 @@
     @media (max-width: 1200px){
         #nav_container{
             position: relative;
+            top:0px;
         }
     }
 
