--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -13,7 +13,10 @@ import Item from "../../components/Item.astro"
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#types_of_connections'>Types of Connections</a></li> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#redundant_constraints'>Redundant Constraints</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#system_classifications'>System Classifications</a></li>
+		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#redundant_constraints'>Redundant Constraints</a></li>
+		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#proper_improper_constraints'>Proper and Improper Constraints</a></li>
+		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#stability_instability'>Stability and Instability</a></li>
       </ul>
       </div>
 <Section title="Reaction Forces" id="reaction_forces">
