--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -82,7 +82,7 @@ There are three ways we can analyze a 2D system to determine if it is stable or 
 
 	<Image src='/Statics/ReactionForcesFigures/UnstableTranslation.jpg' width='6'>Stable system (left) and unstable system (right).</Image>
 
-	<Item>If all of the reaction forces have lines of action that meet in a single point, the system is unstable for rotation at that point. Nothing is preventing the system from rotating about that point. </Item>
+	<Item>If all of the reaction forces have lines of action that meet in a single point, nothing is preventing the system from rotating about that point and the system is unstable for rotation at that point. </Item>
 	<Image src='/Statics/ReactionForcesFigures/UnstableRotation.jpg' width='6'>Stable system (left) and unstable system (right).</Image>
 </Enumerate>
 
