--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -28,7 +28,7 @@ Frames and machines are systems that contain at least one non two force member. 
 
 Unlike trusses, frames and machines are not necessarily only loaded at the joints, and are not necessarily compsed of long, slender members. 
 
-Multi-force members in both frames and machines have the potential to have not only axially internal loading, but also shear internal forces and internal bending moments. 
+Multi-force members in both frames and machines have the potential to have not only axial internal loads, but also shear internal forces and internal bending moments. 
 
 </p>
 
